margin and white space fixes

--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -21,7 +21,7 @@ nav a {
 }
 
 nav a:hover {
-    color: rgb(182, 182, 182);
+    color: rgb(247, 250, 52);
 }
 
 .shopping-cart-icon {
