--- a/src/Components/Popup-ad/popup-ad.css
+++ b/src/Components/Popup-ad/popup-ad.css
@@ -22,6 +22,10 @@
     font-size: 1em;
 }
 
+.popup-link {
+    width: 100%;
+}
+
 .popup-ad h3 {
     margin: 5px;
 }
@@ -54,5 +58,9 @@
     .popup-ad {
         overflow-y: unset;
         overflow-x: unset;
+    }
+
+    .ad-img {
+        max-height: 225px;
     }
 }
