--- a/src/PurchasedItems/purchasedItems.css
+++ b/src/PurchasedItems/purchasedItems.css
@@ -1,5 +1,5 @@
 .list-of-items {
-    margin: 0px 15px;
+    margin: 0px 15px 10px;
 }
 
 .purchased-product {
